<resources>
    <string name="app_name" translatable="false">GoGames</string>
    <string name="page_title" translatable="false">TPA Mobile</string>
    <string name="favorite">help</string>
    <string name="content_description_favorite">Notification</string>
    <string name="search">search</string>
    <string name="content_description_search">search</string>
    <string name="more">more</string>
    <string name="content_description_more">more</string>
    <string name="UserImage">UserImage</string>
    <string name="Username">Username</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="community">Community</string>
    <string name="news">News</string>
    <string name="open_navigation">Open navigation drawer</string>
    <string name="close_navigation">Close navigation drawer</string>
    <string name="navigation">navigation</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="fab_content_desc">addThread</string>
    <string-array name="categoryArray">
        <item>Developer</item>
        <item>Game</item>
        <item>Other</item>
    </string-array>
    <string-array name="sort_by">
        <item>Newest</item>
        <item>Most Discuss</item>
    </string-array>
    <string name="password">Password</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="updateSocial">Update Social Account</string>
    <string name="share">Share</string>
    <string name="unknownEx">Unknown Expiry</string>
    <string name="notify">Notify Me</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="old_price">Old Price</string>
    <string name="new_price">New Price</string>
    <string name="price_cut">Price Cut</string>
    <string name="select_photo">Select Photo</string>
    <string name="email" translatable="false">Email</string>
    <string name="register">Register</string>
    <string name="already_register">Already have an account?</string>
    <string name="skip">SKIP</string>
    <string name="back_to_registration">Back To Registration</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="create_thread">CREATE THREAD</string>
    <string name="title_doubleDot">Title :</string>
    <string name="description_doubleDota">Description :</string>
    <string name="category_doubeDot">Category :</string>
    <string name="submit">Submit</string>
    <string name="edit_thread">EDIT THREAD</string>
    <string name="update_profile">Update Profile</string>
    <string name="category">Category</string>
    <string name="developers">Developers</string>
    <string name="games">Games</string>
    <string name="others">Others</string>
    <string name="hot_threads">Hot Threads</string>
    <string name="tautan">Threads</string>
    <string name="searchingHint">Searching Title ?</string>
    <string name="delete">Delete</string>
    <string name="edit">edit</string>
    <string name="insert_comment">Insert Comment</string>
    <string name="add">Add</string>
    <string name="promotion">Promotion</string>
    <string name="metacritic" translatable="false">Metacritic</string>
    <string name="added">Date Added</string>
    <string name="api_error">Data Not Avaiable API Error</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="sign_in">Sign In</string>
    <string name="uploaded">uploaded by : </string>
    <string name="noData">No Data</string>
    <string name="uploadedThread">Uploaded Thread : </string>

</resources>