<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home"/>
        <item
            android:id="@+id/nav_news"
            android:title="@string/news"
            android:icon="@drawable/news"/>
        <item
            android:id="@+id/nav_community"
            android:title="@string/community"
            android:icon="@drawable/community"/>
    </group>
    <group android:checkableBehavior="single">

        <item android:title="@string/profile">
            <menu>
                <item
                    android:id="@+id/profile"
                    android:title="@string/profile"
                    android:icon="@drawable/profile"/>
                <item
                    android:id="@+id/login"
                    android:title="@string/login"
                    android:icon="@drawable/login"/>
                <item
                    android:id="@+id/logout"
                    android:title="@string/logout"
                    android:icon="@drawable/logout"/>
            </menu>
        </item>
    </group>

</menu>