<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.Update1Fragment"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username"/>
    <EditText
        android:id="@+id/ET_update_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/ET_update_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:singleLine="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/ET_update_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="false"/>
    <Button
        android:id="@+id/btn_update_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="10dp"/>
    <ProgressBar
        android:id="@+id/progressbar_update"
        android:visibility="invisible"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>