<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PromoActivity"
    android:id="@+id/drawer_layoutp">

    <LinearLayout
        android:id="@+id/header_promo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_marginLeft="10dp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_price"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_price"
            android:layout_marginRight="10dp"/>
        <TextView
            android:id="@+id/constraintForRecycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_cut"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDeal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="17dp"
        />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/Navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header_hamburger"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>